force-app/main/default/objects/STR_Signer__c/STR_Signer__c.object-meta.xml
<CustomObject>
    <label>Signer</label>
    <nameField>
        <displayFormat>SIG{0000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>