force-app/main/default/objects/STR_Signer__c/fields/STR_LKP_SignersGroup__c.field-meta.xml
<CustomField>
    <fullName>STR_LKP_SignersGroup__c</fullName>
    <label>Signers Group</label>
    <referenceTo>STR_SignersGroup__c</referenceTo>
    <relationshipLabel>Signers</relationshipLabel>
    <relationshipName>Signers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>