force-app/main/default/objects/STR_Signer__c/fields/STR_LKP_User__c.field-meta.xml
<CustomField>
    <fullName>STR_LKP_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Signers</relationshipName>
    <type>Lookup</type>
</CustomField>