force-app/main/default/objects/STR_Signer__c/fields/STR_TXT_Email__c.field-meta.xml
<CustomField>
    <fullName>STR_TXT_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>