force-app/main/default/objects/STR_Signer__c/recordTypes/STR_Signer.recordType-meta.xml
<RecordType>
    <fullName>STR_Signer</fullName>
    <active>true</active>
    <label>Signer</label>
</RecordType>